tags/2013-08-29_cppreference/Archive/6f13c4d32702e84f3b1980c27aad1951-51aa05c9410b00d4edc03393da68cc55/output
+ clang++ -stdlib=libc++ -std=c++0x -O2 -Wall -pthread main.cpp
main.cpp:7:3: error: no matching function for call to 'vector'
  vector<int>();
  ^~~~~~~~~~~
main.cpp:4:6: note: candidate template ignored: substitution failure [with T = int]
void vector() {}
     ^
1 error generated.
